--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'OpenSans';
+	src: url('/styles/fonts/opensans.ttf') format('truetype');
+	font-weight: 100 900; /* Define the range of weights available */
+	font-style: normal;
+  }
+
+@font-face {
+	font-family: 'OpenSans';
+	src: url('/styles/fonts/opensans-italic.ttf') format('truetype');
+	font-weight: 100 900; /* Same weight range */
+	font-style: italic;
+}
