feat: added favicon and robots

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,7 +1,7 @@
 <header class="w-full py-4 flex justify-center bg-gray-100 dark:bg-slate-800 shadow-sm mb-6 border-b border-b-gray-300 dark:border-b-gray-600">
 	<nav class="max-w-2xl flex flex-1 justify-between px-6 lg:px-0">
 		<a class="text-2xl flex items-center" href="/">
-			<img alt="Digiton News" class="h-9 mx-4 my-2" id="logoImage" src="https://noticias.digiton.tech/images/full-logo-white.svg">
+			<img alt="Digiton News" class="h-9 mx-4 my-2" id="logoImage" src="/images/full-logo-white.svg">
 		</a>
 
 		<div class="flex items-center">
