--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -22,14 +22,12 @@
 
 		<main class="max-w-3xl leading-8 px-6 lg:px-0 pb-16">
 			<section>
-				<h1 class="text-4xl font-bold leading-relaxed mt-3 text-gray-700 dark:text-gray-400">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed md:leading-relaxed mt-3 text-gray-700 dark:text-gray-400">
 					{{ title }}
 				</h1>
 
-				<div class="mt-7">
-					<span class="text-sm">
-						Escrito por {{ by }} em {{ date }}
-					<span>
+				<div class="mt-7 text-center text-sm">
+					Escrito por {{ by }} em {{ date }}
 				</div>
 
 				{# <div class="text-gray-500 mt-8 flex justify-between flex-wrap gap-2 text-xs">
@@ -47,7 +45,7 @@
 				{# <hr class="border-t-2 border-gray-500 mt-6 mb-6"> #}
 			</section>
 
-			<div class="mt-2 mb-6 text-center">
+			<div class="mt-4 md:mt-3 mb-12 md:mb-10 text-center">
 				{% for tag in tags %}
 					<span class="rounded-md bg-blue-200 dark:bg-blue-500 dark:bg-opacity-70 text-blue-600 dark:text-blue-300 text-sm py-1 px-2 mx-3">{{ tag }}</span>
 				{% endfor %}
@@ -55,7 +53,7 @@
 
 			<div class="relative font-semibold tracking-wide mb-10 overflow-hidden rounded-md shadow-sm">
 				<div class="h-52 md:h-80 relative overflow-hidden">
-					<img alt="Imagem Ilustrativa de Código." class="absolute min-w-full top-1/2 -translate-y-1/2" src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+					<img alt="Imagem Ilustrativa de Código." class="absolute min-w-full top-1/2 -translate-y-1/2" src="{{ photo }}">
 				</div>
 
 				<div class="absolute top-3 right-3 text-gray-700">
