--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,10 +17,10 @@
 		</style>
 	</head>
 
-	<body class="bg-gray-200 dark:bg-slate-900 flex flex-col items-center text-gray-600 dark:text-gray-400">
+	<body class="bg-gray-200 dark:bg-slate-900 flex flex-col items-center text-gray-600 dark:text-gray-400 w-[100vw]">
 		{% include 'header.njk' %}
 
-		<main class="max-w-3xl leading-8 px-6 lg:px-0 pb-16">
+		<main class="max-w-full sm:max-w-3xl leading-8 px-6 lg:px-0 pb-16">
 			<section>
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed md:leading-relaxed mt-3 text-gray-700 dark:text-gray-400">
 					{{ title }}
@@ -47,7 +47,7 @@
 
 			<div class="mt-4 md:mt-3 mb-12 md:mb-10 text-center">
 				{% for tag in tags %}
-					<span class="rounded-md bg-blue-200 dark:bg-blue-500 dark:bg-opacity-70 text-blue-600 dark:text-blue-300 text-sm py-1 px-2 mx-3">{{ tag }}</span>
+					<span class="rounded-md text-nowrap bg-blue-200 dark:bg-blue-500 dark:bg-opacity-70 text-blue-600 dark:text-blue-300 text-sm py-1 px-2 mx-3">{{ tag }}</span>
 				{% endfor %}
 			</div>
 
@@ -68,16 +68,16 @@
 			</div>
 
 			<div class="flex justify-center">
-				<ul class="mb-7 md:text-lg leading-10 text-gray-800 dark:text-gray-300 px-4 md:px-14 w-fit flex flex-col gap-2">
-					{# <li class="flex items-center">
-						<i class="h-5 mr-4 text-gray-400" data-lucide="play"></i>
-						<a class="hover:text-zinc-500" href="#o-que-e-devops">Como Você Ganha?</a>
-					</li> #}
+				<ul class="mb-7 md:text-lg leading-8 text-gray-800 dark:text-gray-300 px-4 md:px-14 w-fit flex flex-col gap-4">
 
 					{% for topic in topics %}
-						<li class="flex items-center">
-							<i class="h-5 mr-4 text-gray-400" data-lucide="dot"></i>
-							<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
+						<li class="flex gap-3">
+							<div class="h-7 py-1 text-gray-400">
+								<i data-lucide="dot"></i>
+							</div>
+							<div>
+								<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
+							</div>
 						</li>
 					{% endfor %}
 
@@ -88,7 +88,10 @@
 				</ul>
 			</div>
 
+			{# <div class="max-w-full"> #}
 			{{ content | safe }}
+			{# </div> #}
+
 		</main>
 
 		{% include 'footer.njk' %}
