--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -72,19 +72,20 @@
 
 					{% for topic in topics %}
 						<li class="flex gap-3">
-							<div class="h-7 py-1 text-gray-400">
-								<i data-lucide="dot"></i>
+							<div class="text-gray-400 flex items-center">
+								{% if loop.first %}
+									<i data-lucide="play"></i>
+								{% elif loop.last %}
+									<i data-lucide="brain-circuit"></i>
+								{% else %}
+									<i data-lucide="dot"></i>
+								{% endif %}
 							</div>
 							<div>
-								<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
+									<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
 							</div>
 						</li>
 					{% endfor %}
-
-					{# <li class="flex items-center">
-						<i class="h-5 mr-4 text-gray-400" data-lucide="brain"></i>
-						<a class="hover:text-zinc-500" href="#o-que-e-devops">Pronto?</a>
-					</li> #}
 				</ul>
 			</div>
 
