--- a/src/_includes/metatags.njk
+++ b/src/_includes/metatags.njk
@@ -1,18 +1,17 @@
 <meta name="robots" content="index, follow">
 <meta name="robots" content="max-image-preview:large">
 <meta name="hostname" content="noticias.digiton.tech">
-<link href="/favicon.svg" rel="icon">
 
 <meta content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio." name="description">
 
-<meta name="image" content="https://digiton.tech/images/preview.png">
-<meta itemprop="image" content="https://digiton.tech/images/preview.png">
+<meta name="image" content="https://noticias.digiton.tech/images/preview.png">
+<meta itemprop="image" content="https://noticias.digiton.tech/images/preview.png">
 
 <meta name="twitter:site" content="@digiton">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Digiton Tecnologia">
 <meta name="twitter:description" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
-<meta name="twitter:image:src" content="https://digiton.tech/images/preview.png">
+<meta name="twitter:image:src" content="https://noticias.digiton.tech/images/preview.png">
 
 <meta property="og:image" content="https://noticias.digiton.tech/images/preview.png">
 <meta property="og:image:alt" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
@@ -24,5 +23,27 @@
 <meta property="og:url" content="https://noticias.digiton.tech">
 <meta property="og:description" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
 
-<link color="#000000" href="https://noticias.digiton.tech/images/full-logo.svg" rel="mask-icon">
-<link href="https://noticias.digiton.tech/images/full-logo.svg" rel="fluid-icon" title="Digiton">
+<link rel="mask-icon" color="#000000" href="https://noticias.digiton.tech/images/full-logo.svg">
+<link rel="fluid-icon" title="Digiton" href="https://noticias.digiton.tech/images/full-logo.svg">
+
+
+<!-- General favicon -->
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+<link rel="shortcut icon" href="/images/favicon/favicon.ico">
+
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+
+<!-- Android Icons -->
+<link rel="icon" type="image/png" sizes="192x192" href="/images/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/images/favicon/android-chrome-512x512.png">
+
+<!-- Theme Color (Optional) -->
+<meta name="theme-color" content="#ffffff">
+
+<!-- Opera Speed Dial (Fallback PNG) -->
+<meta name="application-name" content="Digiton Noticias">
+<meta name="description" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
+<meta name="mobile-web-app-capable" content="yes">
