feat: full path favicons and theme

--- a/src/_includes/metatags.njk
+++ b/src/_includes/metatags.njk
@@ -23,27 +23,28 @@
 <meta property="og:url" content="https://noticias.digiton.tech">
 <meta property="og:description" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
 
-<link rel="mask-icon" color="#000000" href="https://noticias.digiton.tech/images/full-logo.svg">
+<link rel="mask-icon" color="#e5f9ff" href="https://noticias.digiton.tech/images/full-logo.svg">
 <link rel="fluid-icon" title="Digiton" href="https://noticias.digiton.tech/images/full-logo.svg">
 
-
 <!-- General favicon -->
-<link rel="icon" type="image/svg+xml" href="/favicon.svg">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
-<link rel="shortcut icon" href="/images/favicon/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="https://noticias.digiton.tech/favicon.svg">
+<link rel="shortcut icon" href="https://noticias.digiton.tech/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://noticias.digiton.tech/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://noticias.digiton.tech/images/favicon/favicon-16x16.png">
 
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://noticias.digiton.tech/images/favicon/apple-touch-icon.png">
 
 <!-- Android Icons -->
-<link rel="icon" type="image/png" sizes="192x192" href="/images/favicon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/images/favicon/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://noticias.digiton.tech/images/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="https://noticias.digiton.tech/images/favicon/android-chrome-512x512.png">
 
 <!-- Theme Color (Optional) -->
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#e5f9ff">
 
 <!-- Opera Speed Dial (Fallback PNG) -->
 <meta name="application-name" content="Digiton Noticias">
 <meta name="description" content="Notícias, artigos, blog e tutoriais da tecnologia para seu negócio.">
 <meta name="mobile-web-app-capable" content="yes">
+
+<link rel="manifest" href="https://noticias.digiton.tech/images/favicon/manifest.json">
