--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,6 @@
 <footer class="w-full px-8 py-16 flex justify-center bg-gray-300 dark:bg-slate-800 shadow-md border-b border-b-gray-300 dark:border-b-gray-600">
 	<div class="flex flex-col gap-5">
-		<ul class="font-semibold flex flex-col sm:flex-row justify-between items-center">
+		<ul class="font-semibold flex flex-col sm:flex-row justify-between items-center gap-4">
 			<li>
 				<a href="https://digiton.tech">Site Principal</a>
 			</li>
@@ -10,13 +10,16 @@
 			<li>
 				<a href="mailto:scemist.lucas@gmail.com">Enviar Sugestão</a>
 			</li>
+			<li>
+				<a href="mailto:scemist.lucas@gmail.com">Código Fonte</a>
+			</li>
 		</ul>
 
 		<hr class="border-gray-400">
 
 		<p class="text-center">
-				Copyright © 2024 Digiton Tecnologia Consultoria em TI LTDA
-				<br> CNPJ (57.784.466/0001-42)
+			Copyright © 2024 Digiton Tecnologia Consultoria em TI LTDA
+			<br> CNPJ (57.784.466/0001-42)
 		</p>
 	</div>
 </footer>
