feat: added repo and post card design

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -11,7 +11,7 @@
 				<a href="mailto:scemist.lucas@gmail.com">Enviar Sugestão</a>
 			</li>
 			<li>
-				<a href="mailto:scemist.lucas@gmail.com">Código Fonte</a>
+				<a href="https://github.com/Scemist/DigitonNoticias">Código Fonte</a>
 			</li>
 		</ul>
 
