--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -57,8 +57,8 @@
 					<i data-lucide="presentation"></i>
 				</div>
 
-				<div class="text-gray-600 dark:text-gray-400 bg-slate-300 dark:bg-slate-800 rounded md:text-lg leading-7 md:leading-8 pt-9 pb-12 px-12">
-					<hr class="mt-0 border-y-2 w-40 mx-auto mb-7 rounded border-slate-500">
+				<div class="text-gray-600 dark:text-gray-400 bg-gray-100 dark:bg-slate-800 rounded md:text-lg leading-7 md:leading-8 pt-9 pb-12 px-12">
+					<hr class="mt-0 border-y-2 w-40 mx-auto mb-7 rounded border-slate-300 dark:border-slate-600">
 
 					<p>{{ prelude }}</p>
 				</div>
