--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -31,16 +31,16 @@
 
 			{{ content | safe }}
 
-			<ul class="mb-7 md:text-lg leading-8 text-gray-800 dark:text-gray-300 mx-0 px-0 w-full flex flex-col gap-5">
+			<ul class="mb-7 md:text-lg leading-8 text-gray-700 dark:text-gray-300 mx-0 px-0 w-full flex flex-col gap-5">
 				{% for post in collections.posts %}
-				<a class="hover:text-zinc-500 border dark:border-gray-700 shadow-sm bg-gray-100 dark:bg-slate-800 px-8 py-6 rounded-lg flex flex-col gap-4" href="{{ post.url }}">
-					<span class="font-semibold">{{ post.data.title }}</span>
+					<a class="hover:shadow-lg transition-all border dark:border-slate-700 shadow-sm bg-gray-100 dark:bg-slate-800 px-8 py-6 rounded-lg flex flex-col gap-4" href="{{ post.url }}">
+						<span class="font-semibold">{{ post.data.title }}</span>
 
-					<div class="text-zinc-500 text-sm truncate">
-						{{ post.data.prelude }}
-					</div>
-				</a>
-			{% endfor %}
+						<div class="text-zinc-500 dark:text-slate-500 text-sm truncate">
+							{{ post.data.prelude }}
+						</div>
+					</a>
+				{% endfor %}
 			</ul>
 		</main>
 
