--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -15,7 +15,7 @@
 			</li>
 		</ul>
 
-		<hr class="border-gray-400">
+		<hr class="border-gray-400 dark:border-slate-700 my-5">
 
 		<p class="text-center">
 			Copyright © 2024 Digiton Tecnologia Consultoria em TI LTDA
