--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -17,7 +17,7 @@
 		</style>
 	</head>
 
-	<body class="bg-gray-200 dark:bg-slate-900 flex flex-col items-center text-gray-600 dark:text-gray-400">
+	<body class="bg-gray-200 dark:bg-slate-900 flex flex-col items-center text-gray-600 dark:text-gray-400 transition-all">
 		{% include 'header.njk' %}
 
 		<main class="max-w-full sm:max-w-3xl leading-8 px-6 lg:px-0 pb-16">
