--- a/src/_includes/menu.njk
+++ b/src/_includes/menu.njk
@@ -15,9 +15,10 @@
 		</div>
 
 		<div class="flex flex-col p-6 space-y-6">
-			<button class="text-base leading-relaxed text-gray-500 dark:text-gray-400">Contribuir</button>
-			<button class="text-base leading-relaxed text-gray-500 dark:text-gray-400">Saber Mais</button>
-			<button class="text-base leading-relaxed text-gray-500 dark:text-gray-400">Materias</button>
+			<a href="https://digiton.tech" class="text-base leading-relaxed text-gray-500 dark:text-gray-400 text-center">Quem Somos?</a>
+			<a href="https://digiton.tech" class="text-base leading-relaxed text-gray-500 dark:text-gray-400 text-center">Site Principal</a>
+			<a href="https://github.com/Scemist/DigitonNoticias" class="text-base leading-relaxed text-gray-500 dark:text-gray-400 text-center">Contribuir</a>
+			<a href="https://digiton.tech" class="text-base leading-relaxed text-gray-500 dark:text-gray-400 text-center">Contato</a>
 		</div>
 	</div>
 </div>
