feat: added google analytics to pages

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
+		{% include "analytics.njk" %}
+
 		<title>{{ title }}</title>
 
 		<meta charset="UTF-8">
