--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -67,11 +67,11 @@
 			</div>
 
 			<div class="flex justify-center">
-				<ul class="mb-7 md:text-lg leading-8 text-gray-800 dark:text-gray-300 px-4 md:px-14 w-fit flex flex-col gap-4">
+				<ul class="mt-2 mb-10 leading-8 text-gray-600 dark:text-gray-400 px-4 md:px-14 w-fit flex flex-col gap-4">
 
 					{% for topic in topics %}
 						<li class="flex gap-3">
-							<div class="text-gray-400 flex items-center">
+							<div class="text-gray-400 dark:text-gray-600 flex items-center">
 								{% if loop.first %}
 									<i data-lucide="play"></i>
 								{% elif loop.last %}
@@ -81,7 +81,7 @@
 								{% endif %}
 							</div>
 							<div>
-									<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
+								<a class="hover:text-zinc-500" href="#{{ topic }}">{{ topic }}</a>
 							</div>
 						</li>
 					{% endfor %}
