feat: added title in post og

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,7 +9,11 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<meta content="ie=edge" http-equiv="X-UA-Compatible">
 
+		<meta property="og:title" content="{{ title }} - Digiton">
+		<meta name="twitter:title" content="{{ title }} - Digiton">
 		{% include "metatags.njk" %}
+		<meta property="og:title" content="{{ title }} - Digiton">
+		<meta name="twitter:title" content="{{ title }} - Digiton">
 
 		<style>
 			{% addStyle 'tailwind.css' %}
