--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -19,7 +19,7 @@
 	<body class="bg-gray-200 dark:bg-slate-900 flex flex-col items-center text-gray-600 dark:text-gray-400 transition-all">
 		{% include 'header.njk' %}
 
-		<main class="max-w-full sm:max-w-3xl leading-8 px-6 lg:px-0 pb-16">
+		<main class="max-w-full md:max-w-3xl leading-8 px-6 lg:px-0 pb-16">
 			<section>
 				<h1 class="text-3xl font-semibold mt-3 text-gray-700 dark:text-gray-400">
 					<i data-lucide="newspaper" class="inline"></i> {{ title }}
@@ -30,15 +30,37 @@
 
 			{{ content | safe }}
 
-			<ul class="mb-7 md:text-lg leading-8 text-gray-700 dark:text-gray-300 mx-0 px-0 w-full flex flex-col gap-5">
+			<ul class="mb-7 md:text-lg leading-8 text-gray-700 dark:text-gray-300 m-0 p-0 max-w-full flex flex-wrap">
 				{% for post in collections.posts %}
-					<a class="hover:shadow-lg transition-all border dark:border-slate-700 shadow-sm bg-gray-100 dark:bg-slate-800 px-8 py-6 rounded-lg flex flex-col gap-4" href="{{ post.url }}">
-						<span class="font-semibold">{{ post.data.title }}</span>
+					<li class="w-full sm:w-1/2 p-2 relative">
+						{# <span class="absolute top-2 right-4 text-xs">
+							{% for tag in post.data.tags %}
+								{{ post.data.tags[0] }}
+							{% endfor %}
+						</span> #}
 
-						<div class="text-zinc-500 dark:text-slate-500 text-sm truncate">
-							{{ post.data.prelude }}
-						</div>
-					</a>
+						<a class="h-full hover:shadow-lg dark:hover:bg-slate-900 transition-all border dark:border-slate-700 shadow-sm bg-gray-100 dark:bg-slate-800 px-8 py-6 rounded-lg flex flex-col gap-4" href="{{ post.url }}">
+							<div class="absolute top-0 right-4">
+								{% if post.data.tags[0] %}
+									<span class="rounded-md text-nowrap bg-blue-200 dark:bg-blue-800 text-blue-600 dark:text-blue-300 text-xs py-1 px-2">
+										{{ post.data.tags[0] }}
+									</span>
+								{% endif %}
+
+								{# {% if post.data.tags[1] %}
+									<span class="ml-2 rounded-md text-nowrap bg-blue-200 dark:bg-blue-800 text-blue-600 dark:text-blue-300 text-xs py-1 px-2">
+										{{ post.data.tags[0] }}
+									</span>
+								{% endif %} #}
+							</div>
+
+							<span class="font-semibold">{{ post.data.title }}</span>
+
+							<div class="text-zinc-500 dark:text-slate-500 text-sm truncate">
+								{{ post.data.prelude }}
+							</div>
+						</a>
+					</li>
 				{% endfor %}
 			</ul>
 		</main>
